# routes/index.js
@@ -4,12 +4,20 @@ const {isAuthenticated} = require('../middlewares/isAuthenticated');
 router.use('/', require('./swagger'));
 
 router.get('/', (req, res) => {
+/**
+ * #swagger.tags = ['Authentication']
+ *  #swagger.description = 'This endpoint retrieves the GitHub username.'
+*/
    res.send(req.session.user !== undefined
       ? `Logged in as ${req.session.user.displayName}`
       : 'Logged out');
 });
 
 router.get('/profile', isAuthenticated, (req, res) => {
+/**
+ * #swagger.tags = ['Authentication']
+ *  #swagger.description = 'This endpoint retrieves all GitHub user information.'
+*/
    res.json({
    message: 'Welcome to your profile!',
    user: req.session.user
